# spg-arch

./: CMakeLists.txt  Lab1.h  Lab2.h  MyWidget1.h  MyWidget2.h  MyWidget3.h  README.md  fragment.frag  main.cpp  run_prog.sh  spg  stb_image.h  vertex.vert
fltk-1.4.1/: configure  fltk.spec
